<resources>
    <string name="app_name">Wallpapers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="text_all">All</string>
    <string name="text_animals">Animals</string>
    <string name="text_nature">Nature</string>
    <string name="text_people">People</string>
    <string name="text_wallpapers">Wallpapers</string>
    <string name="text_technology">Technology</string>
    <string name="text_new_skills">New Skills</string>
    <string name="text_current_events">Current Events</string>
    <string name="text_architecture">Architecture</string>
    <string name="text_fashion">Fashion</string>
    <string name="text_experimental">Experimental</string>
    <string name="text_film">Film</string>
    <string name="text_travel">Travel</string>
    <string name="text_history">History</string>
    <string name="text_spirituality">Spirituality</string>
    <string name="text_street_photography">Street Photography</string>
    <string name="text_athletics">Athletics</string>
    <string name="text_interiors">Interiors</string>
    <string name="text_check_internet_connection">Check Internet Connection</string>

    <string name="text_textures_amp_patterns"><![CDATA[Textures & Patterns]]></string>
    <string name="text_textures_and_patterns">Textures And Patterns></string>
    <string name="text_arts_amp_culture"><![CDATA[Arts & Culture]]></string>
    <string name="text_arts_and_culture">Arts And Culture</string>
    <string name="text_food_amp_drink"><![CDATA[Food & Drink]]></string>
    <string name="text_food_and_drink">Food And Drink</string>
    <string name="text_health_amp_wellness"><![CDATA[Health & Wellness]]></string>
    <string name="text_health_and_wellness">Health And Wellness</string>
    <string name="text_business_amp_work"><![CDATA[Business & Work]]></string>
    <string name="text_business_and_work">Business And Work</string>
    <string name="category">Category</string>
    <string name="text_share_app">Share App</string>
    <string name="text_rate_app">Rate App</string>
    <string name="text_version">Version</string>
    <string name="text_instagram">Instagram</string>
    <string name="text_linkedin">Linkedin</string>
    <string name="text_results_could_not_be_loaded">Results could not be loaded</string>
    <string name="text_retry">Retry</string>
    <string name="text_no_results_found_for_this_search_value">No results found for this search value</string>
    <string name="text_download">Download</string>
    <string name="text_search_here">Search here</string>
    <string name="text_home">Home</string>
    <!-- AdMob ID -->
    <string name="banner_wallpapers_ad_mob_id">ca-app-pub-6699628738766818/1463627859</string>
    <string name="interstitial_wallpapers_ad_mob_id">ca-app-pub-6699628738766818/5019729486</string>
    <string name="rewarded_wallpapers_ad_mob_id">ca-app-pub-6699628738766818/4940016045</string>

</resources>