<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.UnsplashPhotosSearchFragment">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/customColor2"
        android:backgroundTint="@color/customColor2"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="8dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:background="@color/customColor2"
            android:backgroundTint="@color/customColor2"
            android:elevation="0dp"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_arrow" />

        </com.google.android.material.card.MaterialCardView>


        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/customColor2"
            android:backgroundTint="@color/customColor2"
            android:closeIcon="@drawable/close"
            android:commitIcon="@drawable/ic_go"
            android:goIcon="@drawable/ic_go"
            android:gravity="end"
            android:layoutDirection="rtl"
            android:searchIcon="@drawable/ic_search" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ad_view"
        android:layout_below="@+id/linear_layout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="5dp"
        android:orientation="vertical"
        android:paddingTop="2dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        tools:listitem="@layout/item_photo" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateDrawable="@drawable/custom_progress_color"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_view_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_retry"
        android:layout_centerHorizontal="true"
        android:text="@string/text_results_could_not_be_loaded"
        android:textColor="@color/white"
        android:visibility="gone"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/customColor2"
        android:text="@string/text_retry"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_view_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/text_no_results_found_for_this_search_value"
        android:textColor="@color/white"
        android:visibility="gone"
        tools:visibility="visible" />


</RelativeLayout>